[workspace]
members = ["unpacker", "unpacker-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.81"

[workspace.dependencies]
unpacker = { path = "unpacker" }
unpacker-cli = { path = "unpacker-cli" }

rabc = { git = "https://github.com/Athesdrake/rabc.git", tag = "v0.2.1" }
log = "0.4.22"
stderrlog = "0.6.0"
thiserror = "1.0.63"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# restriction = { level = "warn", priority = -1 }
# Allowed pedantic lints
module_name_repetitions = "allow"
missing_errors_doc = "allow"
# Disallowed restriction lints
or_fun_call = "warn"
str_to_string = "warn"
inconsistent_struct_constructor = "warn"
print_stdout = "warn"
print_stderr = "warn"
use_self = "warn"
