[package]
name = "unpacker-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "unpacker"
path = "src/main.rs"

[dependencies]
unpacker = { workspace = true }

log = { workspace = true }
rabc = { workspace = true }
stderrlog = { workspace = true }

clap = { version = "4.5.6", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking"] }

[lints]
workspace = true
